2008-09-10  Derek R. Price  <derek@ximbiot.com>

	* recurse.c (do_file_proc): Simplify via dir_append.
	(do_dir_proc): Ditto.  Some cleanup.

	* root.c (Name_Root): Remove unneeded article from error message.
	* sanity.sh: Update to compensate.
	(dirs-4): Improve FIXCVS comment.

	* recurse.c (do_recursion): Quote UPDATE_DIR in output.  Use new
	NULL2DOT macro.
	* root.c: Include "quote.h".
	(Name_Root): Use dir_append to simplify error messages and improve
	readability.  Add quoting.
	* update.c: Use NULL2DOT in output.
	* sanity.sh: Update to compensate.

2008-09-09  Derek R. Price  <derek@ximbiot.com>

	* client.c (call_in_directory): Simplify drastically.  Servers always
	send parent directories before children.

	* subr.h (PRINT_UPDATE_DIR): Rename macro to...
	(NULL2DOT): ...this.  Handle NULL input.
	* commit.c, root.c: Update all callers.

	* subr.c (dir_append_dirs): Fix block comment.  Accept NULL DIR arg.
	* subr.h (PRINT_UPDATE_DIR): New convenience macro.
	* commit.c (find_dirent_proc, check_dirent_proc): Use new macro.
	* root.c (Name_Root): Ditto.  Also use TRACE_NULL and dir_append to
	further simplify.

2008-08-15  Derek R. Price  <derek@ximbiot.com>

	* update.c (send_dirent_proc): Another simplification via hasAdmin().

	* subr.c (has_slash): Rename to...
	(hasSlash): ...this.
	(hasAdmin): New convenience function.
	* subr.h (has_slash, hasSlash, hasAdmin): Update to match.
	* add.c (add): s/has_slash/hasSlash/.
	* client.c (send_dirent_proc): Use new hasAdmin() function.

	* subr.c (has_slash): New convenience function and...
	* subr.h (has_slash): ...its prototype.
	* add.c (add): Use new convenience function.

2008-03-23  Mark D. Baushke  <mdb@gnu.org>

	[bug #22710]
	* vers_ts.c (time_stamp): Use computed minimum mtime for symlink.
	(Patch suggested by Nelson B Bolyard <nelsonb@iname.com>.)

2008-03-10  Mark D. Baushke  <mdb@gnu.org>

	* mkmodules.c, parseinfo.c: Update copyright.

	* parseinfo.c (parse_config): Add support for new